--- a/labelCloud/resources/interfaces/interface.ui
+++ b/labelCloud/resources/interfaces/interface.ui
@@ -1621,7 +1621,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Save current Perspective</string>
+    <string>Keep Perspective</string>
    </property>
   </action>
   <action name="action_alignpcd">
