added navigation to custom pointcloud index
added name in dialog box for manual pc index


initialized pcd name when input custom pc index is shown


restored title in input dialog


Add option to go to custom pcd index


added navigation to custom pointcloud index

--- a/labelCloud/resources/interfaces/interface.ui
+++ b/labelCloud/resources/interfaces/interface.ui
@@ -172,6 +172,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QPushButton" name="button_pcd_set">
+             <property name="text">
+              <string>Set</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QPushButton" name="button_pcd_next">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
