Fix the name of the Z-rotation option

--- a/labelCloud/resources/interfaces/interface.ui
+++ b/labelCloud/resources/interfaces/interface.ui
@@ -1576,7 +1576,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Z-Rotation Only Mode1223</string>
+    <string>Z-Rotation Only Mode</string>
    </property>
   </action>
   <action name="action_colorwithlabel">
