Blend point colors with labels (#97)
* link labels with PointCloud object

* Blend point rgb colors with its label colors

* Read labels and color the points in opengl

* Fix the colorless logic and make color blending a button

* Fix the initial check status in action_colorwithlabel

* fix colorless logic

* Make point_size, color_with_label properties of PointCloud

* helper function for label stats and print the stats after loading

* Fix the name of the Z-rotation option

* add PyOpenGL-accelerate in setup.cfg

* rename labels to segmentation_labels in PointCloud constructor

Rebase on master

 - small typing fixes
 - apply new naming convention

--- a/labelCloud/resources/interfaces/interface.ui
+++ b/labelCloud/resources/interfaces/interface.ui
@@ -1545,6 +1545,7 @@
     <addaction name="act_show_orientation"/>
     <addaction name="act_save_perspective"/>
     <addaction name="act_align_pcd"/>
+    <addaction name="act_color_with_label"/>
     <addaction name="act_change_settings"/>
    </widget>
    <addaction name="menuFile"/>
@@ -1578,22 +1579,30 @@
     <string>Z-Rotation Only Mode</string>
    </property>
   </action>
+  <action name="act_color_with_label">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Color with labels</string>
+   </property>
+  </action>
   <action name="act_delete_all_labels">
    <property name="text">
     <string>Delete All Current Labels</string>
    </property>
   </action>
-  <action name="action_setstddimensions">
+  <action name="act_set_std_dimensions">
    <property name="text">
     <string>Set Default Bounding Box Dimensions ...</string>
    </property>
   </action>
-  <action name="action_setstdtransformations">
+  <action name="act_set_std_transformations">
    <property name="text">
     <string>Set Default Transformation Steps …</string>
    </property>
   </action>
-  <action name="action_pointsize">
+  <action name="act_point_size">
    <property name="text">
     <string>Point Size</string>
    </property>
