Blend point colors with labels (#97)
* link labels with PointCloud object

* Blend point rgb colors with its label colors

* Read labels and color the points in opengl

* Fix the colorless logic and make color blending a button

* Fix the initial check status in action_colorwithlabel

* fix colorless logic

* Make point_size, color_with_label properties of PointCloud

* helper function for label stats and print the stats after loading

* Fix the name of the Z-rotation option

* add PyOpenGL-accelerate in setup.cfg

* rename labels to segmentation_labels in PointCloud constructor

--- a/labelCloud/resources/interfaces/interface.ui
+++ b/labelCloud/resources/interfaces/interface.ui
@@ -1540,12 +1540,13 @@
     <property name="title">
      <string>Settings</string>
     </property>
-    <addaction name="act_z_rotation_only"/>
-    <addaction name="act_show_floor"/>
-    <addaction name="act_show_orientation"/>
-    <addaction name="act_save_perspective"/>
-    <addaction name="act_align_pcd"/>
-    <addaction name="act_change_settings"/>
+    <addaction name="action_zrotationonly"/>
+    <addaction name="action_showfloor"/>
+    <addaction name="action_showorientation"/>
+    <addaction name="action_saveperspective"/>
+    <addaction name="action_alignpcd"/>
+    <addaction name="action_colorwithlabel"/>
+    <addaction name="action_changesettings"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuLabels"/>
@@ -1578,7 +1579,15 @@
     <string>Z-Rotation Only Mode</string>
    </property>
   </action>
-  <action name="act_delete_all_labels">
+  <action name="action_colorwithlabel">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Color with labels</string>
+   </property>
+  </action>
+  <action name="action_deletealllabels">
    <property name="text">
     <string>Delete All Current Labels</string>
    </property>
